--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
     "@redwoodjs/forms": "^0.38.0",
     "@redwoodjs/router": "^0.38.0",
     "@redwoodjs/web": "^0.38.0",
+    "algoliasearch": "^4.11.0",
     "date-fns": "^2.16.1",
     "error-overlay-webpack-plugin": "^0.4.1",
     "filestack-react": "^3.1.0",
